C-Kubernetes-in-the-Cloud/17-Azure-Kubernetes-Service/done/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  ingressClassName: nginx
  rules:
  # TODO: add your domain name here:
  - host: frontend.YOUR_CHOSEN_DOMAIN
    http:
      paths:
      - pathType: Prefix
        path: "/"
        # note this `backend` isn't our image name
	# but rather a keyword noting the k8s service behind the ingress
        backend:
          service:
            name: frontend
            port:
              number: 3000
